manifests/example/terraform-applier-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terraform-applier
spec:
  template:
    spec:
      containers:
        - name: git-sync
        - name: terraform-applier
